# common-mechanism

./: .gitignore  Benign_db.ipynb  Biorisk_db.ipynb  Databases.ipynb  LICENSE  README.md  Test_db.ipynb  benchmark.txt  commec-config.yaml  common_mechanism.def  conftest.py  environment.yml  figure.html  process_outputs.ipynb  process_outputs.py  pyproject.toml  run_pipeline.sh  setup.cfg  setup.py  simple_test.py  test.bash
.github/: PULL_REQUEST_TEMPLATE.md
commec/: blast_tools.py  check_benign.py  check_biorisk.py  check_reg_path.py  cli.py  commec.py  fetch_nc_bits.py  file_tools.py  flag.py  io_parameters.py  json_io.py  main.py  run_blastx.sh  run_diamond.sh  run_pipeline.sh  screen.py  screen_databases.py  setup.py  split.py  utils.py
commec/config/: constants.py  io_parameters.py  json_io.py  query.py  screen_databases.py  screen_tools.py
commec/databases/: blastdmnd_db.py  blastn_db.py  blastx_db.py  cmscan_db.py  database.py  hmm_db.py  screen_databases.py
commec/screeners/: check_benign.py  check_biorisk.py  check_reg_path.py  fetch_nc_bits.py  parse_check_reg_path.py
commec/tests/: .pylintrc  test_blast_tools.py  test_dbs.py  test_fetch_nc_bits.py  test_io_params.py  test_json.py  test_setup.py  test_split.py  test_utils.py
commec/tools/: blast_tools.py  blastdmnd_handler.py  blastn.py  blastn_handler.py  blastx.py  blastx_handler.py  cmscan.py  cmscan_handler.py  database_handler.py  diamond.py  fetch_nc_bits.py  hmm_handler.py  hmmer.py  search_handler.py
commec/utils/: benchmark.py  concat_seqs.py  file_utils.py  json_html_output.py  template.html
common-mechanism/: check_biorisk.py  check_reg_path.py  fetch_nc_bits.py  process_outputs.py  run_blastx.sh  run_diamond.sh  split.py  split_fasta.py  split_query.py  viz_outputs.py
common-mechanism/tests/: test_split.py
common_mechanism/: check_benign.py  check_biorisk.py  check_reg_path.py  commec.py  concat_seqs.py  fetch_nc_bits.py  flag.py  run_diamond.sh  screen.py  screen_databases.py  split.py  utils.py
common_mechanism/tests/: test_split.py
conda-recipe/: meta.yaml
dev_scripts/: benchmark_visualisation.py  parse_timings.py  split_fasta.py  summarize_screens.py  test_pipeline.sh
example_data/: README.md  igem_test_queries.fasta
example_data/igem_test_queries/: BBa_I713002_A_10458_Plasmid_C1MCS.fasta  BBa_J06126_P_5665___--_No_description_--_.fasta  BBa_J10063_P_24735_Reporter_Green_Firefly_Luciferase_and_LRE_L._Cruciata_E._coli_optimised_.fasta  BBa_J44010_A_7669_Reporter_HixC-pBAD-HixC-RBS-TetF-HixC.fasta  BBa_J78002_P_15509_Translational_Unit_Arg5B15D.fasta  BBa_K080006_P_12158_Regulatory__TetO_TRE-gata4-fmdv2A-dsRed__.fasta  BBa_K081008_A_12110_Translational_Unit_luxI_protein_generator_TERM-.fasta  BBa_K133012_A_13220_Intermediate_CF213-UreB-linker-CF215-RGD-Histop.fasta  BBa_K205004_A_16908_Coding_MerT_-_Membranous_Mercury_transporter_.fasta  BBa_K209429_A_15261_Composite_SSFYFP-hM2D-Tuba.fasta  BBa_K228221_A_14989_Generator_LuxR-3Erbs-3ET7ptag-3ETerminator.fasta  BBa_K257021_A_16536_Composite_PLacI__RBS-TetR__Ter__Ptet__RFP.fasta  BBa_K318519_P_19569_Device_Bile_Salt_Induced_Lysis_Cassette.fasta  BBa_K620001_P_22737_Coding_WT-F87A_p450.fasta  (+20 more)
interface/: process_outputs.ipynb  process_outputs.py  utils.py
queries/: Mycoplasma_mycoides.fasta  Mycoplasma_mycoides_spikedwith_lef.fasta  PF02950_seed_conotoxins.txt  b.anthracis_dnaA.fasta  b.anthracis_dnaA_sliding.fa  b.anthracis_dnaA_spikedwith_lef.fasta  b.anthracis_dnaA_split.fa  b.anthracis_lef_ecoli_optimized.fasta  b.anthracis_lef_frameshift.fasta  b.anthracis_lef_sliding.fa  b.anthracis_lef_split.fa  b.pseudomallei_tssB.fasta  bont_hmmemit.fasta  bont_hmmemit_nt.fasta  c.botulinum_bontA.fasta  c.botulinum_bontE.fasta  c.butyricum_bontE.fasta  gfp.fasta  gfp_spikedwith_lef.fasta  nonconserved_residues.txt  pseudoknots.txt
src/: check_benign.py  check_biorisk.py  check_reg_path.py  check_reg_path_diamond.py  check_reg_path_diamond_proteins.py  check_reg_path_dmnd_prot.py  check_reg_path_nt.py  check_reg_path_prot.py  check_reg_path_proteins.py  concat_seqs.py  fetch_nc_bits.py  fetch_nc_bits_dmnd.py  process_outputs.py  run_blastx.sh  run_diamond.sh  run_pipeline.sh  run_pipeline_diamond.sh  split_fasta.py  split_query.py  split_run_query.py  test_pipeline.sh  utils.py  viz_outputs.py
test_scripts/: parse_test_res.py  parse_test_timings.py  test_pipeline.sh
test_sequences/: b.anthracis_lef.fasta  b.cereus_lef.fasta
(+50 files in other folders)
