[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common_mechanism"
version='0.1.0'
dependencies = [
  "biopython",
  "numpy",
  "pandas"
  # Exclude "pytaxonkit" since it's only available via bioconda
]
requires-python = ">= 3.8" # 
authors = [
  {name = "Nicole Wheeler"},
  {name = "Jen Lu"},
  {name = "Tessa Alexanian", email = "tessa@ibbis.bio"}
]
maintainers = [
  {name = "International Biosecurity and Biosafety Initiative for Science (IBBIS)", email = "info@ibbis.bio"}
]
description='Free, globally-available tool for DNA sequence screening'
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["synthesis screening", "DNA synthesis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pylint',
    'black'
]
test_scripts = [
    'matplotlib'
]

[project.urls]
Homepage = "https://ibbis.bio/common-mechanism"
Repository = "https://github.com/ibbis-screening/common-mechanism.git"

[project.scripts]
split = "common_mechanism.split:main"

[tool.setuptools]
packages = {find = {"include" = ["common_mechanism"]}}