[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common_mechanism"
version='0.1.0'
# This is not a pure python project; dependencies are managed through environment.yml
authors = [
  {name = "Nicole Wheeler"},
  {name = "Jen Lu"},
  {name = "Tessa Alexanian", email = "tessa@ibbis.bio"}
]
maintainers = [
  {name = "International Biosecurity and Biosafety Initiative for Science (IBBIS)", email = "info@ibbis.bio"}
]
description='Free, globally-available tool for DNA sequence screening'
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["synthesis screening", "DNA synthesis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://ibbis.bio/common-mechanism"
Repository = "https://github.com/ibbis-screening/common-mechanism.git"

[project.scripts]
"commec" = "common_mechanism.commec:main"

[tool.setuptools]
packages = {find = {"include" = ["common_mechanism"]}}