[metadata]
name = CommonMechanism
version = 0.0.1
author = Nicole Wheeler
author_email = N.Wheeler@bham.ac.uk
description = An International Common Mechanism for DNA Synthesis Screening
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nwheeler443/CommonMechanism
project_urls =
    Bug Tracker = https://github.com/nwheeler443/CommonMechanism/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
